--- a/style.css
+++ b/style.css
@@ -2,6 +2,15 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
+header a {
+    text-decoration: none;
+    color: rgba(0,0,0,0.8);
+}
+
+a[href], input[type='submit'], input[type='image'], label[for], select, button, .pointer {
+    cursor: pointer;
+}
+
 header {
     position: fixed;
     top: 0px;
@@ -45,14 +54,38 @@ form {
 
 .searchbar {
     margin-top: 30px;
-
+    display: flex;
+    justify-content: center;
 }
 
 .searchbar input{
     border-radius: 15px;
     border: 2px solid rgba(0,0,0,0.2);
-    width: 50vh;
+    width: 50vw;
     height: 30px;
+    padding: 5px 5px 5px 3px;
+    font-family: 'Montserrat';
+    background: linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,.5)), url('images/outline_search_black_24dp.png') no-repeat scroll 5px 9px;
+
+}
+
+
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
+}
+
+.searchbar input:hover{
+    box-shadow: 3px 3px 8px 0px rgba(0,0,0,0.2);
+
+}
+
+.searchbar input:focus{
+    box-shadow: 3px 3px 8px 0px rgba(0,0,0,0.2);
+
 }
 
 .buttons {  
@@ -65,13 +98,32 @@ form {
 }
 
 input[type='submit'] {
-    margin: 15px;
-    padding: 10px 15px;
+    margin: 10px;
+    padding: 10px;
     border: 0px none;
     background-color: rgba(0,0,0,0.03);
-    color: rgba(0,0,0,1);
+    color: rgba(0,0,0);
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
 }
 
+
+footer {
+    position: fixed;
+    margin: 0px;
+    bottom: 0px;
+    left: 0px;
+    height: 10vh;
+    width: 100%;
+    background-color: rgba(0,0,0,0.1);
+    display: flex;
+    flex-direction: row;
+}
+
+footer a {
+    text-decoration: none;
+    margin-top: 20px;
+    margin-left: 30px;
+    color: rgba(0,0,0,0.8)
+}
 
