--- a/style.css
+++ b/style.css
@@ -115,9 +115,10 @@ footer {
     left: 0px;
     height: 10vh;
     width: 100%;
-    background-color: rgba(0,0,0,0.1);
+    background-color: rgb(228, 171, 15, 0.8);
     display: flex;
     flex-direction: row;
+    z-index: 1;
 }
 
 footer a {
